@@ -349,6 +349,8 @@ QString KommanderWidget::evalStringFunction(const QString& function, const QStri
       return QString::number(args[0].contains(args[1]));
     case String::find:
       return QString::number(args[0].find(args[1], args.count() == 3 ? args[2].toInt() : 0));
+    case String::findRev:
+      return QString::number(args[0].findRev(args[1], args.count() == 3 ? args[2].toInt() : args[0].length()));
     case String::left:
       return args[0].left(args[1].toInt());
     case String::right:
